--- a/src/checkout.pcss
+++ b/src/checkout.pcss
@@ -29,9 +29,7 @@
   }
 }
 #box_insourance {
-  float: left;
-  width: 100%;
-  margin: 0 0 50px;
+  @mixin CheckoutBox {};
   input {
     float: left;
     width: 12px;
@@ -43,9 +41,7 @@
   }
 }
 #box_billing_detail {
-  float: left;
-  width: 100%;
-  margin:  0 0 50px;
+  @mixin CheckoutBox {};
   .box {
     lost-column: 1/2;
   }
@@ -68,31 +64,11 @@
     margin: 0 0 10px;
   }
   input {
-    float: left;
-    width: 100%;
-    padding: 0 0 12px;
-    font-size: 16px;
-    line-height: 0.8;
-    color: var(--gris);
-    font-weight: var(--light);
-    letter-spacing: 0;
-    border: 0 none;
-    border-bottom: 1px solid var(--grisclaro);
-    outline: none;
-    transition: var(--animacion);
-    &::placeholder {
-      font-size: 16px;
-      line-height: 26px;
-      color: var(--gris);
-      transition: var(--animacion);
-    }
-    &:focus {
-      color: var(--negro);
-      border-bottom: 1px solid var(--naranja);
-      &::placeholder {
-        color: var(--negro);
-      }
-    }
+    @mixin InputForm {};
+  }
+  textarea {
+    min-height: 80px;
+    @mixin InputForm {};
   }
   .select {
     cursor: pointer;
@@ -124,8 +100,7 @@
   }
 }
 #box_difderent_address {
-  float: left;
-  width: 100%;
+  @mixin CheckoutBox {};
   button {
     float: left;
     width: 100%;
@@ -143,6 +118,55 @@
   }
   h4 {
     border-bottom: 1px solid var(--negro);
+  }
+}
+#box_order_notes {
+  @mixin CheckoutBox {};
+}
+#box_order {
+  @mixin CheckoutBox {};
+  h4 {
+    border-bottom: 1px solid var(--negro);
+  }
+  .top {
+    float: left;
+    width: 100%;
+    padding: 10px 0;
+    border-bottom: 1px solid var(--negro);
+  }
+  .box {
+    lost-column: 1/2;
+  }
+  .tittle {
+    float: left;
+    width: 100%;
+    font-weight: var(--black);
+    font-size: 14px;
+    color: var(--dorado);
+    letter-spacing: 0;
+    line-height: 0.8;
+    text-transform: uppercase;
+  }
+  .result {
+    float: left;
+    width: 100%;
+    padding: 20px 0;
+    border-bottom: 1px solid var(--grisclaro);
+    &:last-child {
+      border-bottom: 0 none;
+    }
+  }
+  b {
+    font-weight: var(--black);
+    color: var(--dorado);
+    @mixin ShoppingCartText {};
+  }
+}
+#box_payment {
+  float: left;
+  width: 100%;
+  .btn_small {
+    width: 270px;
   }
 }
 /* END CHECKOUT */
