--- a/src/shopping_cart.pcss
+++ b/src/shopping_cart.pcss
@@ -32,25 +32,6 @@
     @media (--tabletport) {
       display: block;
     }
-    .tittle {
-      float: left;
-      width: 100%;
-      font-weight: var(--black);
-      color: var(--dorado);
-      letter-spacing: 0;
-      line-height: 0.8;
-      text-transform: uppercase;
-      text-align: left;
-      @media (--mobile) {
-        font-size: 12px;
-      }
-      @media (--tabletland) {
-        font-size: 13px;
-      }
-      @media (--desktop) {
-        font-size: 14px;
-      }
-    }
   }
   .result {
     float: left;
@@ -368,6 +349,25 @@
         filter: grayscale();
       }
     }
+  }
+}
+.tittleProduct {
+  float: left;
+  width: 100%;
+  font-weight: var(--black);
+  color: var(--dorado);
+  letter-spacing: 0;
+  line-height: 0.8;
+  text-transform: uppercase;
+  text-align: left;
+  @media (--mobile) {
+    font-size: 12px;
+  }
+  @media (--tabletland) {
+    font-size: 13px;
+  }
+  @media (--desktop) {
+    font-size: 14px;
   }
 }
 /* END SHOPPING CART */
