Responsive adapt checkout to tabletport screen.

--- a/src/checkout.pcss
+++ b/src/checkout.pcss
@@ -21,9 +21,9 @@
     margin: 90px 0 50px;
   }
   @media (--tabletport) {
-    width: calc(100% - 40px);
-    padding: 15px 20px;
-    margin: 90px 0 50px;
+    width: calc(100% - 30px);
+    padding: 12px 15px;
+    margin: 40px 0;
   }
   @media (--tabletland) {
     width: calc(100% - 40px);
@@ -91,8 +91,8 @@
       margin: 0 0 10px;
     }
     @media (--tabletport) {
-      font-size: 16px;
-      margin: 0 0 10px;
+      font-size: 14px;
+      margin: 0 0 8px;
     }
     @media (--tabletland) {
       font-size: 15px;
@@ -134,8 +134,18 @@
     img {
       position: absolute;
       right: 0;
-      top: 3px;
-      width: 10px;
+      @media (--mobile) {
+        top: 3px;
+        width: 10px;
+      }
+      @media (--tabletport) {
+        top: 5px;
+        width: 8px;
+      }
+      @media (--desktop) {
+        top: 3px;
+        width: 10px;
+      }
     }
   }
 }
@@ -185,7 +195,7 @@
       padding: 20px 0;
     }
     @media (--tabletport) {
-      padding: 20px 0;
+      padding: 10px 0;
     }
     @media (--tabletland) {
       padding: 15px 0;
