--- a/src/general.pcss
+++ b/src/general.pcss
@@ -383,6 +383,20 @@ h1 {
     line-height: 52px;
   }
 }
+h2 {
+  font-family: var(--font2);
+  font-weight: var(--bold);
+  font-size: 42px;
+  line-height: 42px;
+  color: var(--dorado);
+  letter-spacing: 0;
+  margin: 0 0 15px;
+  padding: 0;
+  &.small {
+    font-size: 32px;
+    line-height: 32px;
+  }
+}
 h4 {
   float: left;
   width: 100%;
