Front-dev blog sidebar.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -397,6 +397,18 @@ h2 {
     line-height: 32px;
   }
 }
+h3 {
+  float: left;
+  width: 100%;
+  font-family: var(--font2);
+  font-weight: var(--regular);
+  font-size: 23px;
+  color: var(--dorado);
+  letter-spacing: 0;
+  line-height: 37px;
+  margin: 0;
+  padding: 0;
+}
 h4 {
   float: left;
   width: 100%;
