--- a/src/shopping_cart.pcss
+++ b/src/shopping_cart.pcss
@@ -350,6 +350,17 @@
       }
     }
   }
+  article {
+    margin-bottom: 20px;
+    lost-column: 1/1;
+    .img {
+      width: 100%;
+      margin: 0 0 10px;
+    }
+  }
+  .btn_small_gray {
+    width: 100%;
+  }
 }
 .tittleProduct {
   float: left;
