--- a/src/popup.pcss
+++ b/src/popup.pcss
@@ -113,6 +113,10 @@
     float: left;
     margin: 7px 10px 0 0;
   }
+  &.noMargin {
+    float: left;
+    margin: 10px 0 30px;
+  }
   p {
     float: left;
     font-size: 16px;
