Create function view form register and form login.

--- a/src/popup.pcss
+++ b/src/popup.pcss
@@ -16,6 +16,9 @@
     display: table-cell;
     vertical-align: middle;
   }
+  .box_register {
+    display: none;
+  }
   .box {
     float: none !important;
     margin: auto !important;
