Dev full page About Us.

--- a/src/about_us.pcss
+++ b/src/about_us.pcss
@@ -192,4 +192,20 @@
     text-align: center;
   }
 }
+#banner_contact {
+  float: left;
+  width: 100vw;
+  background: url("../img/banner/bg_banner_contact@2x.jpg");
+  background-size: cover;
+  padding: 200px 0;
+  .box {
+    lost-column: 5/12;
+  }
+  h2 {
+    color: var(--blanco);
+  }
+  a {
+    width: 170px;
+  }
+}
 /* END ABOUT US */
