--- a/src/variables.pcss
+++ b/src/variables.pcss
@@ -207,3 +207,22 @@
     margin: 0 0 50px;
   }
 }
+
+@define-mixin TextAboutUs {
+  @media (--mobile) {
+    font-size: 16px;
+    line-height: 21px;
+  }
+  @media (--tabletport) {
+    font-size: 16px;
+    line-height: 21px;
+  }
+  @media (--tabletland) {
+    font-size: 15px;
+    line-height: 20px;
+  }
+  @media (--desktop) {
+    font-size: 16px;
+    line-height: 21px;
+  }
+}
