--- a/src/about_us.pcss
+++ b/src/about_us.pcss
@@ -6,13 +6,31 @@
   .box {
     background: rgba(255, 255, 255, 0.95);
     padding: 30px;
-    lost-column: 7/12;
+    @media (--mobile) {
+      lost-column: 7/12;
+    }
+    @media (--tabletport) {
+      lost-column: 8/12;
+    }
+    @media (--tabletland) {
+      lost-column: 7/12;
+    }
   }
   .pic {
-    margin: -400px 0 0;
     position: relative;
     z-index: -1;
-    lost-column: 7/12 1;
+    @media (--mobile) {
+      margin: -400px 0 0;
+      lost-column: 7/12;
+    }
+    @media (--tabletport) {
+      margin: -200px 0 0;
+      lost-column: 8/12 1;
+    }
+    @media (--tabletland) {
+      margin: -400px 0 0;
+      lost-column: 7/12 1;
+    }
   }
 }
 #box_about {
@@ -20,8 +38,16 @@
   width: 100vw;
   .box {
     clear: both !important;
-    margin: -20px 0 0;
     lost-column: 1/2;
+    @media (--mobile) {
+      margin: -20px 0 0;
+    }
+    @media (--tabletport) {
+      margin: -40px 0 0;
+    }
+    @media (--tabletland) {
+      margin: -20px 0 0;
+    }
     &:first-child {
       margin: 0;
     }
@@ -32,8 +58,8 @@
       margin: 0 0 0 70px;
     }
     @media (--tabletport) {
-      width: calc(100% - 70px);
-      margin: 0 0 0 70px;
+      width: calc(100% - 40px);
+      margin: 0 0 0 40px;
     }
     @media (--tabletland) {
       width: calc(100% - 50px);
@@ -211,7 +237,7 @@
     padding: 200px 0;
   }
   @media (--tabletport) {
-    padding: 200px 0;
+    padding: 150px 0;
   }
   @media (--tabletland) {
     padding: 170px 0;
@@ -224,7 +250,7 @@
       lost-column: 5/12;
     }
     @media (--tabletport) {
-      lost-column: 5/12;
+      lost-column: 1/1;
     }
     @media (--tabletland) {
       lost-column: 6/12;
