--- a/src/variables.pcss
+++ b/src/variables.pcss
@@ -210,16 +210,14 @@
 
 @define-mixin TextAboutUs {
   @media (--mobile) {
-    font-size: 16px;
-    line-height: 21px;
-  }
-  @media (--tabletport) {
     font-size: 13px;
     line-height: 19px;
+    text-align: left;
   }
   @media (--tabletland) {
     font-size: 15px;
     line-height: 20px;
+    text-align: center;
   }
   @media (--desktop) {
     font-size: 16px;
