--- a/src/shipping_and_insurance.pcss
+++ b/src/shipping_and_insurance.pcss
@@ -3,7 +3,17 @@
   float: left;
   width: 100%;
   .box {
-    lost-column: 1/3;
+    @media (--mobile) {
+      margin-bottom: 30px;
+      lost-column: 1/1;
+    }
+    @media (--tabletport) {
+      lost-column: 1/2;
+    }
+    @media (--tabletland) {
+      margin-bottom: 0;
+      lost-column: 1/3;
+    }
   }
   .result {
     float: left;
@@ -32,17 +42,27 @@
     float: left;
     width: 100%;
     font-weight: var(--black);
-    font-size: 16px;
     color: var(--blanco);
     letter-spacing: 0;
+    @media (--mobile) {
+      font-size: 15px;
+    }
+    @media (--tabletland) {
+      font-size: 16px;
+    }
   }
   .time {
     float: left;
     width: 100%;
     font-weight: var(--light);
-    font-size: 14px;
     color: var(--crema);
     letter-spacing: 0;
+    @media (--mobile) {
+      font-size: 13px;
+    }
+    @media (--tabletland) {
+      font-size: 14px;
+    }
   }
 }
 .description_shipping {
@@ -52,16 +72,35 @@
   .box {
     float: none !important;
     margin: auto !important;
-    lost-column: 10/12;
+    @media (--mobile) {
+      lost-column: 1/1;
+    }
+    @media (--tabletland) {
+      lost-column: 10/12;
+    }
   }
   .text {
     font-family: var(--font2);
     font-weight: var(--regular);
-    font-size: 23px;
     color: var(--dorado);
     letter-spacing: 0;
-    line-height: 37px;
     text-align: center;
+    @media (--mobile) {
+      font-size: 23px;
+      line-height: 37px;
+    }
+    @media (--tabletport) {
+      font-size: 21px;
+      line-height: 35px;
+    }
+    @media (--tabletland) {
+      font-size: 22px;
+      line-height: 36px;
+    }
+    @media (--desktop) {
+      font-size: 23px;
+      line-height: 37px;
+    }
   }
 }
 #box_delivery_zone {
@@ -72,7 +111,12 @@
   background-size: cover;
   .full_box {
     .box {
-      lost-column: 1/2;
+      @media (--mobile) {
+        lost-column: 1/1;
+      }
+      @media (--tabletland) {
+        lost-column: 1/2;
+      }
     }
     .full_box {
       margin: 0 0 50px;
@@ -98,15 +142,26 @@
   }
   .tittle {
     float: left;
-    width: calc(100% - 10px - 10px);
-    margin: 0 10px 0 0;
     font-family: var(--font2);
     font-weight: var(--regular);
-    font-size: 20px;
     color: var(--grisclaro);
     letter-spacing: 0;
-    line-height: 30px;
-    margin: 0 0 5px;
+    @media (--mobile) {
+      width: calc(100% - 10px - 10px);
+      margin: 0 10px 5px 0;
+      font-size: 20px;
+      line-height: 30px;
+    }
+    @media (--tabletport) {
+      width: calc(100% - 10px - 10px);
+      margin: 0 10px 5px 0;
+      font-size: 19px;
+      line-height: 29px;
+    }
+    @media (--tabletland) {
+      font-size: 20px;
+      line-height: 30px;
+    }
   }
   .icon {
     float: left;
@@ -156,7 +211,18 @@
     }
   }
   .pic {
-    margin: -150px 0 0 calc((-100vw + 1200px) / 2);
+    @media (--mobile) {
+      margin: -150px 0 0 calc((-100vw + 1200px) / 2);
+    }
+    @media (--tabletport) {
+      margin: -250px 0 0 calc((-100vw + 700px) / 2);
+    }
+    @media (--tabletland) {
+      margin: -200px 0 0 calc((-100vw + 900px) / 2);
+    }
+    @media (--desktop) {
+      margin: -150px 0 0 calc((-100vw + 1200px) / 2);
+    }
   }
 }
 /* END SHIPPING AND INSURANCE */
